# clamscan-splitter

./: .coverage  .gitignore  README.md  SPECIFICATION.md  TODO.md  pyproject.toml
src/clamscan_splitter/: __init__.py  chunker.py  cli.py  config.py  merger.py  monitor.py  parser.py  retry.py  scanner.py  state.py
tests/: __init__.py  conftest.py  test_chunker.py  test_cli.py  test_config.py  test_edge_cases.py  test_integration.py  test_merger.py  test_monitor.py  test_parser.py  test_retry.py  test_scanner.py  test_state.py
tests/fixtures/: __init__.py  mock_filesystem.py  mock_outputs.py
